- fixed loading bug in FF, sometimes in chrome - added better visibility for blood rooms - reduced size of monster image

--- a/style.css
+++ b/style.css
@@ -59,3 +59,7 @@ body {
 	border: 1px solid #ea0000;
 	background-color: #6b0000;
 }
+
+#hidden {
+	display: none;
+}
